@@ -18,6 +18,7 @@ INCLUDE_DIRECTORIES(
   ${CMAKE_CURRENT_SOURCE_DIR}/../taglib/ogg/vorbis
   ${CMAKE_CURRENT_SOURCE_DIR}/../taglib/ogg/flac
   ${CMAKE_CURRENT_SOURCE_DIR}/../taglib/flac
+  ${CMAKE_CURRENT_SOURCE_DIR}/../taglib/wavpack
 )
 
 SET(test_runner_SRCS
@@ -42,6 +43,7 @@ SET(test_runner_SRCS
   test_ape.cpp
   test_apetag.cpp
   test_wav.cpp
+  test_wavpack.cpp
 )
 IF(WITH_MP4)
    SET(test_runner_SRCS ${test_runner_SRCS}
